parallax_js/parallax_js.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*, *::before, *::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: "Poppins", sans-serif;
}

::selection {
    background-color: #0b372dbb;
}

.logo {
    width: 100px;
}

header {
    position: absolute;
    z-index: 9999;
    width: 100%;
    padding: 0.9rem 0;
    top: 0;
    left: 0;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

header nav {
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header ul {
    display: flex;
    list-style: none;
    align-items: center;
}

header ul a {
    text-decoration: none;
    color: #fff;
    padding: 0 1.5rem;
    text-transform: uppercase;
    font-weight: 300;
    font-size: 0.83rem;
}

.search a{
    font-size: 1.05rem;
    padding: 0 3rem;
}

.hamburger {
    padding-left: 1.5rem;
}

.hamburger a {
    display: flex;
    padding: 0;
    width: 37px;
    height: 37px;
    border-radius: 50%;
    background-color: rgba(115, 115, 115, 0.7);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    justify-content: center;
    align-items: center;
}

.hamburger .bar {
    position: relative;
    width: 52%;
    height: 1.3px;
    background-color: #fff;
    border-radius: 2px;
}

.hamburger .bar::before, 
.hamburger .bar::after {
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 60%;
    height: 100%;
    background-color: inherit;
    border-radius: 2px;

}

.hamburger .bar::before {
    top: -4.5px;

}

.hamburger .bar::after {
    top: 4.5px;
    
}

main {
    position: relative;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

.bg-img {
    position: absolute;
    width: 2800px;
    top: calc(50% - 380px);
    left: calc(50% + 10px);
    z-index: 1;
}

.fog-7 {
    position: absolute;
    z-index: 2;
    width: 1900px;
    top: calc(50% - 100px);
    left: calc(50% + 300px);
}

.mountain-10 {
    position: absolute;
    z-index: 3;
    width: 892px;
    top: calc(50% + 130px);
    left: calc(50% + 230px);
}

.fog-6 {
    position: absolute;
    z-index: 4;
    width: 2450px;
    top: calc(50% + 85px);
    left: calc(50% + 10px);
}

.mountain-9 {
    position: absolute;
    z-index: 5;
    width: 600px;
    top: calc(50% + 240px);
    left: calc(50% - 470px);
}

.mountain-8 {
    position: absolute;
    z-index: 6;
    width: 920px;
    top: calc(50% + 210px);
    left: calc(50% - 220px);
}

.fog-5 {
    position: absolute;
    z-index: 7;
    width: 450px;
    top: calc(50% + 160px);
    left: calc(50% + 20px);
}

.mountain-7 {
    position: absolute;
    z-index: 10;
    width: 780px;
    top: calc(50% + 220px);
    left: calc(50% + 420px);
}

.text {
    position: absolute;
    z-index: 11;
    top: calc(50% - 130px);
    left: 50%;
    text-align: center;
    text-transform: uppercase;
    color: #fff;
    pointer-events: auto !important; 
}

.text h2 {
    font-weight: 100;
    font-size: 6.5rem;
    line-height: 0.88;
}

.text h1 {
    font-weight: 800;
    font-size: 8rem;
    line-height: 0.88;
}

.mountain-6 {
    position: absolute;
    z-index: 10;
    width: 410px;
    top: calc(50% + 60px);
    left: calc(50% + 660px);
}

.fog-4 {
    position: absolute;
    z-index: 11;
    width: 625px;
    top: calc(50% + 243px);
    left: calc(50% - 60px);
}

.mountain-5 {
    position: absolute;
    z-index: 12;
    width: 690px;
    top: calc(50% + 280px);
    left: calc(50% + 100px);
}

.fog-3 {
    position: absolute;
    z-index: 13;
    width: 1600px;
    top: calc(50% + 110px);
    left: calc(50% - 15px);
}

.mountain-4 {
    position: absolute;
    z-index: 14;
    width: 1100px;
    top: calc(50% + 350px);
    left: calc(50% - 450px);
}

.mountain-3 {
    position: absolute;
    z-index: 15;
    width: 450px;
    top: calc(50% + 90px);
    left: calc(50% + 880px);
}

.fog-2 {
    position: absolute;
    z-index: 16;
    width: 1600px;
    top: calc(50% + 110px);
    left: calc(50% + 760px);
}

.mountain-2 {
    position: absolute;
    z-index: 17;
    width: 700px;
    top: calc(50% + 220px);
    left: calc(50% + 470px);
}

.mountain-1 {
    position: absolute;
    z-index: 18;
    width: 700px;
    top: calc(50% + 150px);
    left: calc(50% - 670px);
}

.sun-rays {
    position: absolute;
    z-index: 19;
    top: 0;
    right: 0;
    width: 995px;
    pointer-events: none;
}

.black-shadow {
    position: absolute;
    z-index: 20;
    bottom: 0;
    right: 0;
    width: 100%;
}

.fog-1 {
    position: absolute;
    z-index: 21;
    width: 1950px;
    top: calc(100% - 355px);
    left: 50%;
}

.vignette {
    position: absolute;
    z-index: 100;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: radial-gradient(
        ellipse at center, 
        rgba(0, 0, 0, 0) 65%, 
        rgba(0, 0, 0, 0.7)
    );
    pointer-events: none;
}

.parallax {
    pointer-events: none;
    transform: translate(-50%, -50%);
    transition: 0.45s cubic-bezier(.2, .49, .32, .99);
}

